--- a/src/app/pages/cadastro/receita/receita.component.scss
+++ b/src/app/pages/cadastro/receita/receita.component.scss
@@ -6,7 +6,7 @@
   }
 }
 
-::ng-deep input.form-control{
+::ng-deep input.form-control, ::ng-deep select.form-control{
   color: #495057 !important;
 }
 
