--- a/src/app/pages/cadastro/receita/receita.component.html
+++ b/src/app/pages/cadastro/receita/receita.component.html
@@ -1,8 +1,8 @@
-
 <nb-card>
   <nb-card-header>
-    Carteiras
-    <input #search class="search" type="text" placeholder="Pesquisar" (keydown.enter)="onSearch(search.value)" style="float:right">
+    Receitas
+    <input #search class="search" type="text" placeholder="Pesquisar"
+    (keydown.enter)="onSearch(search.value)" style="float:right">
   </nb-card-header>
 
   <nb-card-body>
