--- a/src/app/pages/controle/listfaturas/listfaturas.component.html
+++ b/src/app/pages/controle/listfaturas/listfaturas.component.html
@@ -1,6 +1,6 @@
 <div class="dark-layout">
   <div class="row">
-    <div class="col-xl-6 col-md-6">
+    <div class="col-xl-4 col-md-6">
       <div class="card">
           <div class="card-header">
               <h5>Extrato Mensal</h5>
@@ -13,12 +13,12 @@
               <div class="table-responsive analytic-table">
                   <table class="table table-faturas">
                       <tbody>
-                          <tr *ngFor="let fatura of faturas" (click)="onSelect(fatura)" [ngClass]="{'active': selectedItem == fatura ? 'active' : ''}">
+                          <tr *ngFor="let faturaFechada of ResultGetExtrato" (click)="onSelect(faturaFechada)" [ngClass]="{'active': selectedItem == faturaFechada ? 'active' : ''}">
                               <td>
-                                  <span class="count text-primary">{{fatura.idcarteira}}</span>
-                                  <span class="table-msg">{{fatura.vencimento}}</span>
+                                  <span class="count text-primary">{{faturaFechada.descricao}}</span>
+                                  <span class="table-msg">{{faturaFechada.diavenc !== "" ? faturaFechada.diavenc + '/' + faturaFechada.mesfat + '/' + faturaFechada.anofat : "Vencimento Variado"}}</span>
                               </td>
-                              <td>{{fatura.valor}}</td>
+                              <td>{{faturaFechada.valor}}</td>
                           </tr>
                       </tbody>
                   </table>
@@ -27,7 +27,7 @@
       </div>
     </div>
     <!-- Table start -->
-    <div class="col-xl-6 col-md-6">
+    <div class="col-xl-8 col-md-6">
         <div class="row">
             <div class="col-lg-12">
                 <div class="card table-1-card">
@@ -42,20 +42,20 @@
                             <table class="table">
                                 <thead>
                                     <tr class="text-capitalize">
-                                        <th>Conta</th>
+                                        <th class="text-center">Compra/Venc</th>
                                         <th>Descricao</th>
-                                        <th class="text-center">Parcela</th>
-                                        <th class="text-center">Venc</th>
                                         <th class="text-right">Valor</th>
+                                        <th class="text-left">Parcela</th>
+                                        <th>Categoria</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let conta of contas">
-                                        <td>{{conta.idconta}}</td>
-                                        <td>{{conta.descricao}}</td>
-                                        <td class="text-center">{{conta.parcela}}</td>
                                         <td class="text-center">{{conta.vencimento}}</td>
+                                        <td>{{conta.descricao}}</td>
                                         <td class="text-right">{{conta.valor}}</td>
+                                        <td class="text-left">{{conta.numparc+'/'+conta.qtdeparc}}</td>
+                                        <td>{{conta.innercategoria.descricao}}</td>
                                     </tr>
                                 </tbody>
                             </table>
