--- a/src/app/pages/controle/controle.component.html
+++ b/src/app/pages/controle/controle.component.html
@@ -34,7 +34,7 @@
  </nb-card>
   <div class="row" >
     <div class="col-md-4">
-      <ngx-saldogeral [icon]="iconSaldo" [titulo]="titleSaldo" [total]="dadosSaldo.totalCarteiras" [detalhes]="dadosSaldo.carteiras"></ngx-saldogeral>
+      <ngx-saldogeral [icon]="iconSaldo" [titulo]="titleSaldo" [total]="saldoCarteira.total" [detalhes]="saldoCarteira.carteiras"></ngx-saldogeral>
     </div>
     <div class="col-md-4">
       <ngx-saldogeral [icon]="iconReceita" [titulo]="titleReceita" [total]="dadosSaldo.totalReceitas" [detalhes]="dadosSaldo.receitas"></ngx-saldogeral>
