--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <h1 id="title" class="title">Login</h1>
-<p class="sub-title">Hello! Log in with your email.</p>
+<p class="sub-title"></p>
 
 <nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
    <p class="alert-title"><b>Oh snap!</b></p>
@@ -18,7 +18,7 @@
 <form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title">
 
    <div class="form-control-group">
-      <label class="label" for="input-email">Email address:</label>
+      <label class="label" for="input-email">E-mail</label>
       <input nbInput
              fullWidth
              [(ngModel)]="user.email"
@@ -34,10 +34,10 @@
              [attr.aria-invalid]="email.invalid && email.touched ? true : null">
       <ng-container *ngIf="email.invalid && email.touched">
          <p class="caption status-danger" *ngIf="email.errors?.required">
-            Email is required!
+            E-mail é obrigatório!
          </p>
          <p class="caption status-danger" *ngIf="email.errors?.pattern">
-            Email should be the real one!
+            E-mail deve ser o valido!
          </p>
       </ng-container>
    </div>
@@ -74,9 +74,9 @@
       </ng-container>
    </div>
 
-   <div class="form-control-group accept-group">
+   <!--<div class="form-control-group accept-group">
       <nb-checkbox name="rememberMe" [(ngModel)]="user.rememberMe" *ngIf="rememberMe">Remember me</nb-checkbox>
-   </div>
+   </div>-->
 
    <button nbButton
            fullWidth
@@ -88,7 +88,7 @@
    </button>
 </form>
 
-<section *ngIf="socialLinks && socialLinks.length > 0" class="links" aria-label="Social sign in">
+<!--<section *ngIf="socialLinks && socialLinks.length > 0" class="links" aria-label="Social sign in">
    or enter with:
    <div class="socials">
       <ng-container *ngFor="let socialLink of socialLinks">
@@ -110,8 +110,8 @@
          </a>
       </ng-container>
    </div>
-</section>
+</section>-->
 
-<section class="another-action" aria-label="Register">
+<!--<section class="another-action" aria-label="Register">
    Don't have an account? <a class="text-link" routerLink="../register">Register</a>
-</section>
+</section>-->
