--- a/src/app/pages/cadastro/pagamento/pagamento.component.html
+++ b/src/app/pages/cadastro/pagamento/pagamento.component.html
@@ -2,7 +2,7 @@
    <nb-card-header>Pagamento</nb-card-header>
    <nb-card-body>
       <div class="dark-layout pag-layout">
-         <div class="row" cdkDropListGroup>
+         <!--<div class="row" cdkDropListGroup>
             <div class="col-xl-3 col-md-6"  *ngFor="let diapg of diasPagamento">
                <div class="card">
                   <div class="card-header">
@@ -23,9 +23,86 @@
                   </div>
                </div>
             </div>
+         </div>-->
+         <div class="row">
+            <div class="col-md-4">
+               <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
+                  <div class="row">
+                     <div class="col-md-12">
+                        <div class="row">
+                           <div class="col-md-12">
+                              <mat-form-field class="input-example">
+                                 <mat-label>Fatura</mat-label>
+                                 <mat-select class="pb-2" [(ngModel)]="faturaoption" formControlName="fatura">
+                                    <mat-option matRipple *ngFor="let itemfatura of faturasSelect"
+                                                value="{{itemfatura.id}}">{{itemfatura.descricao}}</mat-option>
+                                 </mat-select>
+                                 <mat-hint></mat-hint>
+                              </mat-form-field>
+                           </div>
+                        </div>
+
+
+                        <div class="row">
+                           <div class="col-md-6">
+                              <mat-form-field class="input-example">
+                                 <mat-label>Mês</mat-label>
+                                 <mat-select class="pb-2" [(ngModel)]="mesref" formControlName="mesfat">
+                                    <mat-option matRipple *ngFor="let mes of mesesSelect"
+                                                value="{{mes.id}}">{{mes.descr}}</mat-option>
+                                 </mat-select>
+                                 <mat-hint></mat-hint>
+                              </mat-form-field>
+                           </div>
+                           <div class="col-md-6">
+                              <mat-form-field class="input-example">
+                                 <mat-label>Ano</mat-label>
+                                 <label>
+                                    <input matInput autocomplete="off" [(ngModel)]="anoref" formControlName="anofat">
+                                 </label>
+                                 <mat-hint></mat-hint>
+                              </mat-form-field>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="col-md-12">
+
+                        <mat-form-field class="input-example">
+                           <mat-label>Data de Pagamento</mat-label>
+                           <input matInput autocomplete="off" formControlName="datapg" [matDatepicker]="picker"  >
+                           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                           <mat-datepicker #picker></mat-datepicker>
+                           <mat-hint></mat-hint>
+                        </mat-form-field>
+
+                        <mat-form-field class="input-example">
+                           <mat-label>Valor</mat-label>
+                           <label>
+                              <input matInput autocomplete="off" formControlName="valor">
+                           </label>
+                           <mat-hint></mat-hint>
+                        </mat-form-field>
+
+                        <mat-form-field class="input-example">
+                           <mat-label>Carteira</mat-label>
+                           <mat-select class="pb-2" formControlName="carteira">
+                              <mat-option matRipple *ngFor="let itemcart of carteirasSelect"
+                                          value="{{itemcart.id}}">{{itemcart.descricao}}</mat-option>
+                           </mat-select>
+                           <mat-hint></mat-hint>
+                        </mat-form-field>
+                     </div>
+                  </div>
+                  <div class="row">
+                     <div class="col-md-12 pt-3">
+                        <button type="submit" nbButton status="primary">Pagar</button>
+                     </div>
+                  </div>
+               </form>
+            </div>
          </div>
       </div>
    </nb-card-body>
 </nb-card>
-
-
